[package]
name = "ytdlp-ejs"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "ejs"
repository = "https://github.com/ahaoboy/ytdlp-ejs"
homepage = "https://github.com/ahaoboy/ytdlp-ejs"
authors = ["ahaoboy"]

[features]
default = ["qjs", "boa", "external"]
qjs = ["rquickjs"]
boa = ["boa_engine"]
bindgen = ["rquickjs/bindgen"]
external = []
snmalloc = ["dep:snmalloc-rs"]

[dependencies]
swc_ecma_parser = "32"
swc_ecma_ast = "19"
swc_ecma_codegen = "21"
swc_common = { version = "18" }
rquickjs = { version = "0.11", optional = true, git = "https://github.com/DelSkayn/rquickjs.git" }
# TODO: features = ["intl_bundled"] need 10mb
boa_engine = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
snmalloc-rs = { version = "0.3", features = [
  "default",
  "lto",
], default-features = false, optional = true }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
