[package]
name = "ytdlp-ejs"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "ejs"
repository = "https://github.com/ahaoboy/ytdlp-ejs"
homepage = "https://github.com/ahaoboy/ytdlp-ejs"
authors = ["ahaoboy"]

[[bin]]
name = "ejs"
path = "src/main.rs"

[features]
default = ["qjs", "boa", "external", "tracing"]
qjs = ["dep:rquickjs"]
boa = ["dep:boa_engine"]
bindgen = ["rquickjs/bindgen"]
external = []
snmalloc = ["dep:snmalloc-rs"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
# https://github.com/swc-project/swc/issues/11942
swc_ecma_parser = { version = "41", default-features = false }
# swc_ecma_parser = { version = "41" }
swc_ecma_ast = "25"
swc_ecma_codegen = "28"
swc_common = { version = "23" }
rquickjs = { version = "0.12", optional = true, git = "https://github.com/DelSkayn/rquickjs.git" }
# TODO: features = ["intl_bundled"] need 10mb
boa_engine = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
snmalloc-rs = { version = "0.7", features = [
  "default",
  "lto",
], default-features = false, optional = true }
# https://github.com/time-rs/time/issues/783
# time = "=0.3.47"

# Logging (optional — controlled by "tracing" feature, enabled by default)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
